[package]
name = "kmf-installer"
version = "0.1.0"
authors = ["zerodegress <zerodegress@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
dioxus = { version = "0.6.0", features = [] }
directories = "6.0.0"
kmf = { git = "https://github.com/KorabliModForce/kmf", rev = "64694edbe894764dffa69497229a3f0ca4a3d436", version = "0.1.1" }
native-dialog = { version = "0.9.0", features = ["async"] }
tokio = { version = "1.45.0", features = ["tracing", "full"] }
tracing = "0.1.41"
url = "2.5.4"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
